# tab-cleanner

./: AGENTS.md  Cargo.toml  README.md  context.md  oxichrome-research.md  plan-phase2.md  plan-phase3.md  progress-phase3.md  progress.md
docs/: sml-architecture.md
src/: lib.rs  popup.rs  semantic.rs  types.rs
src/ffi/: messaging.rs  mod.rs  tab_groups.rs  tabs_ext.rs
src/grouping/: apply.rs  domain.rs  keywords.rs  mod.rs
src/popup/: css.rs  data.rs  handlers.rs  messaging.rs  mod.rs  persistence.rs  render.rs
src/sml/: grouping.rs  mod.rs  model_cache.rs  model_loader.rs  pipeline.rs  tokenizer.rs
src/storage/: group_state.rs  mod.rs
