[package]
name = "tab-cleanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxichrome = { version = "0.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
url = "2"
js-sys = "0.3"

[dev-dependencies]
serde_json = "1"
