[package]
name = "tab-cleanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxichrome = { version = "0.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
url = "2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Element", "Window", "HtmlHeadElement",
    "CacheStorage", "Cache", "Response", "console",
    "WorkerGlobalScope"
] }
leptos = { version = "0.8", features = ["csr"] }
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
getrandom = { version = "0.3", features = ["wasm_js"] }
unicode-normalization = "0.1"
